Updated the sample to match the latest JedAI SDK

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,331 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
     android:orientation="vertical"
     tools:context=".ActivityMain">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:background="@android:color/white"
-        android:theme="@style/AppTheme"
-        app:navigationIcon="@drawable/ic_anagog_24dp"
-        app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <FrameLayout
-            android:id="@+id/fragment_holder"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:src="@drawable/ic_help_outline_black_36dp"
-            app:fabSize="normal"
-            app:backgroundTint="@color/paper"
-            app:maxImageSize="@dimen/xxlarge_margin"/>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/info_card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/small_margin"
-            android:layout_toStartOf="@id/info"
-            android:visibility="gone"
-            app:cardBackgroundColor="@color/paper"
-            app:cardCornerRadius="@dimen/medium_margin"
-            app:cardElevation="@dimen/medium_margin"
-            app:cardUseCompatPadding="true"
-            tools:visibility="visible">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/close_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.4"
-                    android:layout_marginLeft="@dimen/small_margin"
-                    android:layout_marginTop="@dimen/small_margin"
-                    android:layout_marginBottom="@dimen/small_margin"
-                    android:background="?selectableItemBackgroundBorderless"
-                    android:padding="@dimen/small_margin"
-                    android:tint="@color/red"
-                    android:src="@drawable/ic_close_black_24dp"/>
-
-                <android.support.v4.widget.NestedScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:fadeScrollbars="false"
-                    android:scrollbars="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/info_text"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="@dimen/medium_margin"
-                            tools:text="@string/app_name"
-                            android:textStyle="italic"/>
-
-                        <LinearLayout
-                            android:visibility="gone"
-                            android:id="@+id/real_time_legend"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/small_margin"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="@dimen/xxlarge_margin"
-                                    android:layout_height="@dimen/xxlarge_margin"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:padding="@dimen/small_margin"
-                                    android:src="@drawable/background_rounded_stroke"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center_vertical"
-                                    android:text="Visit (stay more than 10min inside POI);"/>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/small_margin"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="@dimen/xxlarge_margin"
-                                    android:layout_height="@dimen/xxlarge_margin"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:padding="@dimen/small_margin"
-                                    android:src="@drawable/background_hatch"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center_vertical"
-                                    android:text="Geofence (passing through POI or staying less than 10min);"/>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/small_margin"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="@dimen/xxlarge_margin"
-                                    android:layout_height="@dimen/xxlarge_margin"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:padding="@dimen/small_margin"
-                                    android:src="@drawable/background_dots"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center_vertical"
-                                    android:text="Transportation (event catched during transportation by vehicle);"/>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/small_margin"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="@dimen/xxlarge_margin"
-                                    android:layout_height="@dimen/xxlarge_margin"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:padding="@dimen/small_margin"
-                                    android:src="@drawable/background_activity"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center_vertical"
-                                    android:text="Activity (the activity in which user was involved);"/>
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:id="@+id/map_legend"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/small_margin"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="@dimen/xxlarge_margin"
-                                    android:layout_height="@dimen/xxlarge_margin"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:padding="@dimen/small_margin"
-                                    android:src="@drawable/ic_location_enter_24dp"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center_vertical"
-                                    android:text="Visit"/>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/small_margin"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="@dimen/xxlarge_margin"
-                                    android:layout_height="@dimen/xxlarge_margin"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:padding="@dimen/small_margin"
-                                    android:src="@drawable/ic_location_home_36dp"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center_vertical"
-                                    android:text="Home location"/>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/small_margin"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="@dimen/xxlarge_margin"
-                                    android:layout_height="@dimen/xxlarge_margin"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:padding="10dp"
-                                    android:src="@drawable/ic_location_history_12dp"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center_vertical"
-                                    android:text="&quot;Breadcrumbs&quot;"/>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:paddingLeft="@dimen/xlarge_margin"
-                                android:layout_margin="@dimen/small_margin"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="@dimen/xxlarge_margin"
-                                    android:layout_height="@dimen/xxlarge_margin"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:padding="10dp"
-                                    android:src="@drawable/ic_location_history_gps_12dp"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center_vertical"
-                                    android:text="GPS provider"/>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:paddingLeft="@dimen/xlarge_margin"
-                                android:layout_margin="@dimen/small_margin"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="@dimen/xxlarge_margin"
-                                    android:layout_height="@dimen/xxlarge_margin"
-                                    android:layout_marginRight="@dimen/small_margin"
-                                    android:padding="10dp"
-                                    android:src="@drawable/ic_location_history_net_12dp"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center_vertical"
-                                    android:text="Network provider"/>
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </android.support.v4.widget.NestedScrollView>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/medium_margin"
-            android:background="@drawable/gradient_shadow"/>
-
-    </RelativeLayout>
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:labelVisibilityMode="unlabeled"
-        app:menu="@menu/navigation"/>
+        android:text="@string/app_name"/>
+
 
 </LinearLayout>
